--- a/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
@@ -1,8 +1,133 @@
-﻿
-@{
-    ViewData["Title"] = "Login";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-}
+﻿@model Asmin.Entities.DTO.UserLoginDto
 
-<h1>Login</h1>
+<!doctype html>
+<html class="no-js" lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Login - Asmin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico">
+    <link rel="stylesheet" href="/admin/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/admin/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/admin/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="/admin/assets/css/metisMenu.css">
+    <link rel="stylesheet" href="/admin/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/admin/assets/css/slicknav.min.css">
+
+    <!-- amchart css -->
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+
+    <!-- others css -->
+    <link rel="stylesheet" href="/admin/assets/css/typography.css">
+    <link rel="stylesheet" href="/admin/assets/css/default-css.css">
+    <link rel="stylesheet" href="/admin/assets/css/styles.css">
+    <link rel="stylesheet" href="/admin/assets/css/responsive.css">
+    <!-- modernizr css -->
+    <script src="/admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+
+<body>
+    <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <!-- preloader area start -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- preloader area end -->
+    <!-- login area start -->
+
+    <div class="login-area">
+        <div class="container">
+            <div class="login-box ptb--100">
+                <form method="post">
+                    <div class="login-form-head" style="background:blue">
+                        <img width="120" src="~/img/asmin/asmi-logo-transparent.png" />
+                        <h4>Sign In</h4>
+                        <p>Hello there, Sign in and start managing your operations.</p>
+                    </div>
+
+                    <div class="login-form-body">
+
+                        @{
+                            if (ViewData.ModelState.ErrorCount > 0)
+                            {
+                                <div class="alert alert-warning">
+                                    @Html.ValidationSummary(false)
+                                </div>
+                            }
+                        }
+
+                        @{
+                            #region Old
+
+                            @*if (ViewData.ModelState.ErrorCount > 0)
+                                {
+                                    var modelStateErros = ViewData.ModelState.Values
+                                        .Where(m => m.Errors.Count > 0)
+                                        .Select(m => m.Errors)
+                                        .ToList();
+
+                                    for (int i = 0; i < modelStateErros.Count(); i++)
+                                    {
+                                        <div class="alert alert-warning" role="alert">
+                                            @modelStateErros[0][0].ErrorMessage
+                                        </div>
+                                    }
+                                }*@
+
+                            #endregion
+                        }
+
+                        <div class="form-gp">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" name="Email" id="exampleInputEmail1" required>
+                            <i class="ti-email"></i>
+                            <div class="text-danger"></div>
+                        </div>
+                        <div class="form-gp">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" name="Password" id="exampleInputPassword1" required>
+                            <i class="ti-lock"></i>
+                            <div class="text-danger"></div>
+                        </div>
+                        <div class="row mb-4 rmber-area">
+                            <div class="col-6">
+                                <div class="custom-control custom-checkbox mr-sm-2">
+                                    <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+                                    <label class="custom-control-label" for="customControlAutosizing">Remember Me</label>
+                                </div>
+                            </div>
+                            <div class="col-6 text-right">
+                                <a href="#">Forgot Password?</a>
+                            </div>
+                        </div>
+
+                        <div class="submit-btn-area">
+                            <button id="form_submit" type="submit">Login <i class="ti-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- login area end -->
+    <!-- jquery latest version -->
+    <script src="/admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <!-- bootstrap 4 js -->
+    <script src="/admin/assets/js/popper.min.js"></script>
+    <script src="/admin/assets/js/bootstrap.min.js"></script>
+    <script src="/admin/assets/js/owl.carousel.min.js"></script>
+    <script src="/admin/assets/js/metisMenu.min.js"></script>
+    <script src="/admin/assets/js/jquery.slimscroll.min.js"></script>
+    <script src="/admin/assets/js/jquery.slicknav.min.js"></script>
+
+    <!-- others plugins -->
+    <script src="/admin/assets/js/plugins.js"></script>
+    <script src="/admin/assets/js/scripts.js"></script>
+</body>
+
+</html>
