--- a/src/Asmin/Asmin.WebMVC/Views/Home/Index.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
 ﻿<div style="margin-top:10%;">
-    <img src="~/img/Asmin.png" width="800"/>
+    <img src="~/img/asmin/Asmin.png" width="800"/>
 </div>
