ui modifications made

--- a/src/Asmin/Asmin.WebMVC/Views/Shared/_Layout.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asmin - Basically .NET CORE Infrastructure</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/assets/site/css/site.css" />
 </head>
 <body style="background:blue; text-align:center">
 
