--- a/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Index.cshtml
@@ -1,5 +1,70 @@
-﻿@{
-    <h3>
-        Welcome @((ViewBag.CurrentUser as Asmin.Core.Entities.Concrete.User).FirstName)
-    </h3>
+﻿<div class="row">
+    <!-- seo fact area start -->
+    <div class="col-lg-8">
+        <div class="row">
+            <div class="col-md-6 mt-5 mb-3">
+
+                @await Component.InvokeAsync("RegisteredUsersCount")
+
+            </div>
+            <div class="col-md-6 mt-md-5 mb-3">
+
+                @await Component.InvokeAsync("IncomingVisitors")
+
+            </div>
+
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="seo-fact sbg4">
+                        <div class="p-4 d-flex justify-content-between align-items-center">
+                            <div class="seofct-icon">New Users</div>
+                            <canvas id="seolinechart4" height="60"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 mb-3 mb-lg-0">
+                <div class="card">
+                    <div class="seo-fact sbg3">
+                        <div class="p-4 d-flex justify-content-between align-items-center">
+                            <div class="seofct-icon">Impressions</div>
+                            <canvas id="seolinechart3" height="60"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- seo fact area end -->
+</div>
+
+
+@section Scripts{
+
+    <!-- start chart js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+
+    <!-- start highcharts js -->
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+
+    <!-- start amcharts -->
+    <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+    <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
+    <script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
+    <script src="https://www.amcharts.com/lib/3/serial.js"></script>
+    <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
+    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+
+    <!-- all line chart activation -->
+    <script src="~/assets/admin/js/line-chart.js"></script>
+    <!-- all pie chart -->
+    <script src="~/assets/admin/js/pie-chart.js"></script>
+    <!-- all bar chart -->
+    <script src="~/assets/admin/js/bar-chart.js"></script>
+    <!-- all map chart -->
+    <script src="~/assets/admin/js/maps.js"></script>
+
 }
