--- a/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
@@ -1,50 +1,44 @@
 ﻿@model Asmin.Entities.DTO.UserLoginDto
-
+@{ 
+    Layout = null;
+}
 <!doctype html>
 <html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Login - Asmin</title>
+    <title>Asmin - Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="/favicon.ico">
-    <link rel="stylesheet" href="/admin/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/admin/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/admin/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="/admin/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="/admin/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/admin/assets/css/slicknav.min.css">
+    <link rel="stylesheet" href="/assets/admin/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/admin/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/admin/css/themify-icons.css">
+    <link rel="stylesheet" href="/assets/admin/css/metisMenu.css">
+    <link rel="stylesheet" href="/assets/admin/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/admin/css/slicknav.min.css">
 
     <!-- amchart css -->
     <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
 
     <!-- others css -->
-    <link rel="stylesheet" href="/admin/assets/css/typography.css">
-    <link rel="stylesheet" href="/admin/assets/css/default-css.css">
-    <link rel="stylesheet" href="/admin/assets/css/styles.css">
-    <link rel="stylesheet" href="/admin/assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/admin/css/typography.css">
+    <link rel="stylesheet" href="/assets/admin/css/default-css.css">
+    <link rel="stylesheet" href="/assets/admin/css/styles.css">
+    <link rel="stylesheet" href="/assets/admin/css/responsive.css">
     <!-- modernizr css -->
-    <script src="/admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="/assets/admin/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body>
-    <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <!-- preloader area start -->
-    <div id="preloader">
-        <div class="loader"></div>
-    </div>
-    <!-- preloader area end -->
-    <!-- login area start -->
 
+    <!-- login area start -->
     <div class="login-area">
         <div class="container">
             <div class="login-box ptb--100">
                 <form method="post">
                     <div class="login-form-head" style="background:blue">
-                        <img width="120" src="~/img/asmin/asmi-logo-transparent.png" />
+                        <img width="120" src="~/assets/site/img/asmin/asmi-logo-transparent.png" />
                         <h4>Sign In</h4>
                         <p>Hello there, Sign in and start managing your operations.</p>
                     </div>
@@ -113,21 +107,19 @@
             </div>
         </div>
     </div>
-
     <!-- login area end -->
     <!-- jquery latest version -->
-    <script src="/admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="/assets/admin/js/vendor/jquery-2.2.4.min.js"></script>
     <!-- bootstrap 4 js -->
-    <script src="/admin/assets/js/popper.min.js"></script>
-    <script src="/admin/assets/js/bootstrap.min.js"></script>
-    <script src="/admin/assets/js/owl.carousel.min.js"></script>
-    <script src="/admin/assets/js/metisMenu.min.js"></script>
-    <script src="/admin/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="/admin/assets/js/jquery.slicknav.min.js"></script>
-
+    <script src="/assets/admin/js/popper.min.js"></script>
+    <script src="/assets/admin/js/bootstrap.min.js"></script>
+    <script src="/assets/admin/js/owl.carousel.min.js"></script>
+    <script src="/assets/admin/js/metisMenu.min.js"></script>
+    <script src="/assets/admin/js/jquery.slimscroll.min.js"></script>
+    <script src="/assets/admin/js/jquery.slicknav.min.js"></script>
     <!-- others plugins -->
-    <script src="/admin/assets/js/plugins.js"></script>
-    <script src="/admin/assets/js/scripts.js"></script>
+    <script src="/assets/admin/js/plugins.js"></script>
+    <script src="/assets/admin/js/scripts.js"></script>
 </body>
 
 </html>
