--- a/src/Asmin/Asmin.WebMVC/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Views/Shared/_LayoutAdmin.cshtml
@@ -255,7 +255,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#">Message</a>
                                 <a class="dropdown-item" href="#">Settings</a>
-                                <a asp-action="logout" class="dropdown-item">Log Out</a>
+                                <a asp-action="logout" asp-controller="Home" class="dropdown-item">Log Out</a>
                             </div>
                         </div>
                     </div>
