Changed cache key and added some summary.

--- a/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Asmin.Entities.DTO.UserLoginDto
+﻿@model Asmin.Entities.CustomEntities.Request.User.UserLoginDto
 @{ 
     Layout = null;
 }
