I removed unnecessary methods and changed name in ISessionService and SessionService.

--- a/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
+++ b/src/Asmin/Asmin.WebMVC/Areas/Admin/Views/Home/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Asmin.Entities.CustomEntities.Request.User.UserLoginDto
+﻿@model Asmin.Entities.CustomEntities.Request.User.UserLoginRequest
 @{ 
     Layout = null;
 }
